philly-311-citywide-meta/src/objects/Feedback_Account_Org__c.object
<CustomObject>
    <description>A mapping of accounts to their organizations.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedback Account Orgs</relationshipLabel>
        <relationshipName>Feedback_Account_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Salesforce organization ID.</description>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>Every org has a name</description>
        <label>Org Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Feedback Account Org</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Account Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Account Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>